Fix alignment issue in main content section

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, Verdana, Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Arial, Helvetica, Verdana, Calibri, "Trebuchet MS", sans-serif;
 
   --dashboard-text-size: 1.6rem;
   --sidebar-background: #1785d6;
@@ -20,7 +20,7 @@
   --user-details-size: 1.3rem;
   --user-details-weight: 600;
 
-  --button-bg-color: #1785d6; 
+  --button-bg-color: #1785d6;
   --button-text-color: white;
   --button-text-size: 0.9rem;
   --button-text-weight: 600;
@@ -67,7 +67,8 @@ body {
 .dashboard {
   font-size: var(--dashboard-text-size);
 }
-.navigation, .branding {
+.navigation,
+.branding {
   display: grid;
   row-gap: 24px;
 }
@@ -136,7 +137,6 @@ body {
   height: auto;
   margin-right: 16px;
   border-radius: 64px;
-
 }
 
 #welcome-text {
@@ -158,23 +158,24 @@ body {
   display: grid;
   grid-template-columns: 3fr 1fr;
   gap: 16px;
-  padding: 32px 16px 48px 16px;
-  align-items: stretch;
+  padding: 0px 32px 48px 24px;
 }
 
 .projects-container {
-  grid-row: 1/3;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .content-title {
   font-size: var(--content-title-size);
   font-weight: var(--content-title-weight);
-  margin-bottom: 8px;
+  margin: 32px 0px 8px 0px;
 }
 
 .projects {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 24px;
 }
 
@@ -182,12 +183,12 @@ body {
   background-color: white;
   border-radius: 8px;
   padding: 32px 24px;
-  height: min(120px, auto);
   display: grid;
-  grid-template-rows: 1fr 4fr 1fr;
+  grid-template-rows: 1fr 2fr 1fr;
 }
 
-.project-title, .announcement-title {
+.project-title,
+.announcement-title {
   font-size: var(--content-subtitle-size);
   font-weight: var(--content-subtitle-weight);
 }
@@ -195,11 +196,16 @@ body {
 .project-shortcuts {
   display: grid;
   grid-template-columns: 1fr auto auto auto;
-  grid-gap: 12px;
+  grid-gap: 16px;
 }
 
 .project-shortcuts span:first-child {
   grid-column: 2;
+}
+
+.announcements-trendings-wrapper {
+  display: flex-column;
+  justify-content: space-between;
 }
 
 .announcements-board {
@@ -226,7 +232,7 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   border-radius: 8px;
-  padding: 8px;
+  padding: 8px 0px;
 }
 
 .trending {
@@ -259,7 +265,6 @@ body {
   color: var(--content-color);
 }
 
-
 .card {
   box-shadow: 5px 5px 5px var(--tile-shadow);
 }
@@ -286,4 +291,3 @@ body {
 .project-icon {
   height: 24px;
 }
-
